# sunpy-dashboard

./: LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
skill_ci_status/: __init__.py  base.py  dashboard.py  web.py
skill_ci_status/dashboard/: index.html  packages.json
skill_ci_status/providers/: azure_pipelines.py  base.py
skill_ci_status/tests/: test_dashboard.py
sunpy_dashboard/: __init__.py  api.py  base.py  dashboard.py  main.py  packages.py  web.py
sunpy_dashboard/dashboard/: Card.js  PackageView.js  PageLoadingIndicator.js  cards.css  index.html  packages.json
sunpy_dashboard/providers/: __init__.py  azure_pipelines.py  base.py  github_actions.py
sunpy_dashboard/tests/: test_azure.py  test_dashboard.py
