[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="sunpy_dashboard"
author="Stuart Mumford"
author-email="stuart@cadair.com"
home-page="https://github.com/Cadair/skill-sunpy-dashboard"
requires=[
    "flit_core>=2.2.0",
    "opsdroid",
    "pydantic",
    "aiohttp"
]
requires-python=">=3.8"
description-file="README.md"

[tool.flit.entrypoints.opsdroid_skills]
sunpy_dashboard = "sunpy_dashboard"

