[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="sunpy_dashboard"
author="Stuart Mumford"
author-email="stuart@cadair.com"
home-page="https://github.com/Cadair/sunpy-dashboard"
requires=[
    "flit_core>=2.2.0",
    "pydantic",
	"fastapi",
]
requires-python=">=3.12"
description-file="README.md"
